test/tests/errors/error-repeat-not-bool.sm
// true
// false
// false
/**/
/**/

program {
    var x: int = 1;
    repeat {
        output 1;
    } until (x)
}